Tue Dec 15 10:26:23 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkevents.c: Keep separate putback_events and 
	queued_events queues so that we get both FIFO and 
	preemptive behavior for	gdk_event_put().

Tue Dec 15 09:22:44 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkrc.c (gtk_rc_init): Removed unused 
	variable, fixed minor memory leak.

	* gdk/gdk.c: Fixed another merge problem.

Tue Dec 15 08:53:38 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c (gdk_get_display): Remove gdk_signal,
	which crept back in in last commit.

Tue Dec 15 01:38:53 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/Makefile.am: Commented out testthreads from
	the build process, since we won't have any idea
	how to create a thread.

	* configure.in (LIBS): use glib-config ... gthread
	so we always build a thread-compatible library.

        * gtk/gtkaccellabel.c gtk/gtkclist.c gtk/gtkcolorsel.c
	  gtk/gtkcombo.c gtk/gtkcontainer.c gtk/gtkentry.c
	  gtk/gtklist.c gtk/gtkmenuitem.c gtk/gtknotebook.c
	  gtk/gtkrange.c gtk/gtkselection.c gtk/gtkspinbutton.c
	  gtk/gtktext.c gtk/gtktooltips.c gtk/gtkwidget.c:
	
	Add GTK_THREADS_ENTER/LEAVE pairs around timeouts
	and idles to account for the fact that they are no
	longer called within the GTK+ lock.

	* gtk/gtkprivate.h: Added definitions for locking
	the main GTK+ mutex.
	
	* gtk/gtkmain.c: Re-implement the main loop 
	in terms of the GLib main loop.

	* gdk/gdk.h gdk/gdkthreads.c gdk/Makefile.am: Removed threading 
	functionality, as it seems better to subsume GDK within the 
	GTK+ lock than vice-versa.

        * gdk/gdkevents.c: New file, containing event handling bits 
	from gdk.c.

	* gdk/gdkevents.c: Implement event source for GDK
	events.
	
	* configure.in gdk/gdkevents.c: Removed attempts to 
	subtract base_id, which were already non-functional.

Mon Dec 14 23:05:20 PST 1998 Manish Singh <yosh@gimp.org>

	* acconfig.h
	* configure.in: removed IPC_RMID_DEFERRED_RELEASE check
